# SeqDataVal

./: .gitignore  ENVIRONMENT.md  EXTERNAL_ARTIFACTS.md  LICENSE  PAPER_EXPERIMENT_INDEX.md  PAPER_RELEASE_CROSSWALK.md  README.md  REPRODUCIBILITY.md  environment.yml  pyproject.toml  requirements.txt
config/: base_config.yaml  cifar_config.yaml  large_config.yaml  rq1_config.yaml  rq3_large_datasets.yaml
finetuning/: MULTISEED_TRAINSEED_RESULTS.csv  MULTISEED_TRAINSEED_RESULTS.md  README.md  README_RELEASE.md  batch_run_selection_bipartite.sh  bipartite_greedy_coverage.py  compute_embeddings_for_datelm.py  compute_embeddings_st.py  merge_lora_peft.py  requirements-cpu.txt  requirements-gpu.txt  run_bipcov_pipeline.sh
finetuning/bipartite_greedy/: __init__.py  probe_bipartite_greedy_instruct.py  probe_bipartite_greedy_instruct.sh
finetuning/bipcov/: README.md  __init__.py  probe_bipcov_from_emb.py
finetuning/multiseed_extra_baselines/: MULTISEED_TRAINSEED_RESULTS.csv  MULTISEED_TRAINSEED_RESULTS.md  README.md
finetuning/multiseed_extra_baselines_oldserver/: README.md
finetuning/scripts/: run_cpu_demo.sh
finetuning/table3_bipcov_emb_ablation_big4_datelm/: MULTISEED_TRAINSEED_RESULTS.csv  MULTISEED_TRAINSEED_RESULTS.md  TIMING.csv
finetuning/table3_bipcov_emb_ablation_datelm/: MULTISEED_TRAINSEED_RESULTS.csv  MULTISEED_TRAINSEED_RESULTS.md  TIMING.csv
finetuning/table3_single_seed_datelm/: MULTISEED_TRAINSEED_RESULTS.csv  MULTISEED_TRAINSEED_RESULTS.md  TABLE3_REPRO_ANALYSIS.md
scripts/: aggregate_rq1_dp.py  cluster_probe.sh  compare_budget500_table3.py  compare_versions.py  compare_with_paper.py  paper_table3_ground_truth.csv  plot_rq1_figure6.py  rq1_dp_status.sh  rq1_dp_worker.sh  run_budget500_curve_mean_table.py  run_budget500_table.py  run_rq1_dp.sh  run_rq1_dp_multinode.sh  run_rq2_curvature.py  run_rq3.sh  smoke_test.sh
src/: main.py  main_large.py
src/evaluators/: __init__.py  (+3 more)
(+45 files in other folders)
