[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sequentialdataval"
version = "0.1.0"
description = "Unifying and Optimizing Data Values for Selection via Sequential Decision-Making"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "SequentialDataVal Authors"}
]
keywords = [
    "data valuation",
    "data selection",
    "machine learning",
    "sequential decision making",
    "shapley value"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.25.0,<2.0",
    "pandas>=1.5.0",
    "scikit-learn>=1.2.0",
    "scipy>=1.10.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "opendataval>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tqdm>=4.60.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
utility = ["cvxpy>=1.4.0"]
finetuning = [
    "sentence-transformers>=2.2.0",
    "transformers>=4.35.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]
all = [
    "sequentialdataval[utility,finetuning,dev]",
]

[project.urls]
Homepage = "https://github.com/frankhlchi/SeqDataVal"
Documentation = "https://github.com/frankhlchi/SeqDataVal#readme"
Repository = "https://github.com/frankhlchi/SeqDataVal"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100
